--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu Blog de confianza</span>
+                <span id="tagline">Tu Blog 'maestro'</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -21,6 +21,7 @@
                     Excepto si eres Rockstar. Pero estadisticamente
                     no lo eres.... por ahora.
                 </p>
+                <p>suscribete y dale like</p>
             </div>
         </div>
     </body>
