--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,7 @@
                     y tus ideas.
                     Mucho mas que ir a conferencias o salir en Youtube.
                     Excepto si eres Rockstar. Pero estadisticamente
-                    no lo eres.... por ahora.
+                    no lo eres.... por ahora.Ni en un futuro
                 </p>
                 <p>suscribete y dale like</p>
             </div>
