--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,9 @@
                 </p>
                 <p>suscribete y dale like</p>
             </div>
+            <div id="footer">
+                Hecho con amor en Platzi &hearts;
+            </div>
         </div>
     </body>
 </html>
