--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a 
                     explicar las cosas incre&iacute;bles que se pueden hacer 
                     con las ramas </p>
+                <p><img id="equipo" src="imagenes/equipoPlatzi.jpg" width="350" height="auto"></p>
                 <p>Los Blogs son la mejor forma de compartir informacion 
                     y tus ideas.
                     Mucho mas que ir a conferencias o salir en Youtube.
