Url de imagenes a blogpost.html

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="imagenes/dragon.png"/>
+                <img id="logo" src="imagenes/dragon.png" title="https://ibb.co/HtGZ7QB"/>
                 Hyperblog
                 <span id="tagline">Tu Blog de cabecera</span>
             </div>
@@ -17,8 +17,8 @@
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a 
                     explicar las cosas incre&iacute;bles que se pueden hacer 
                     con las ramas </p>
-                <p><img id="equipo" src="imagenes/equipoPlatzi.jpg" width="350" height="auto"></p>
-                <p><img id= "puerta" src="imagenes/PushPull.png" width="350" height="auto" ></p>
+                <p><img id="equipo" src="imagenes/equipoPlatzi.jpg" width="350" height="auto" title="https://ibb.co/7JWVXzf"></p>
+                <p><img id= "puerta" src="imagenes/PushPull.png" width="350" height="auto" title="https://ibb.co/4NK8wYp" ></p>
                 <p>Los Blogs son la mejor forma de compartir informacion 
                     y tus ideas.
                     Mucho mas que ir a conferencias o salir en Youtube.
