cambio al tagline y color del footer :)

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" title="https://ibb.co/HtGZ7QB"/>
                 Hyperblog
-                <span id="tagline">Tu Blog de cabecera</span>
+                <span id="tagline">Tu Blog de confianza</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
